// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`estimateCost - NumberInput Item > render basic props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_default__1pgyf3t10 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
    >
      <div
        class="styles__1pgyf3tu styles_inView_false__1pgyf3tv"
        data-testid="summary-overlay"
        style="--_1pgyf3t1: 0;"
      >
        <ul
          class="styles__1pgyf3tx"
        >
          <li
            class="styles__1pgyf3tk styles_isFirstElement_true__1pgyf3tm"
          >
            <div
              class="styles__1pgyf3t9"
              style="--_1pgyf3t0: 16px;"
            >
              <div
                class=""
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <div
                    class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
                  >
                    <p
                      class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a"
                    >
                      NumberInput
                    </p>
                  </div>
                </div>
                <div
                  class="components__1oy0ow48 components_isOverlay_true__1oy0ow4b"
                >
                  <div
                    class="components__1oy0ow48 components_isOverlay_false__1oy0ow4a"
                  >
                    <div
                      class="components__1oy0ow4h components_isOverlay_true__1oy0ow4j components_variant_normal__1oy0ow4m"
                    >
                      1
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="styles__1pgyf3tk"
          >
            <div
              class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
            >
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzg uv_icons_1sbwqkz1g"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  clip-rule="evenodd"
                  d="M10 2q-2.29.002-4.507.276a1.965 1.965 0 0 0-1.715 1.961V16a2 2 0 0 0 2 2h8.444a2 2 0 0 0 2-2V4.237c0-.98-.716-1.838-1.715-1.961A37 37 0 0 0 10 2M6.436 8.889c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM7.102 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 7.111 14zm1.26-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM9.028 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 9.037 14zm1.263-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM10.957 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008a.667.667 0 0 0-.667-.667zm1.265-5.111c0-.368.299-.667.667-.667h.009c.368 0 .667.299.667.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.667 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.009a.667.667 0 0 0 .667-.666v-.01a.667.667 0 0 0-.667-.666zm0 1.925c.368 0 .667.299.667.667v1.926a.667.667 0 1 1-1.333 0V12.74c0-.368.298-.667.666-.667M7.111 4.667a.667.667 0 0 0-.667.666v.445c0 .368.299.666.667.666h5.778a.667.667 0 0 0 .667-.666v-.445a.667.667 0 0 0-.667-.666z"
                  fill-rule="evenodd"
                />
              </svg>
              Estimated cost
            </div>
            <div
              class="components__1oy0ow48 components_isOverlay_false__1oy0ow4a"
            >
              <div
                class="components__1oy0ow4h components_isOverlay_false__1oy0ow4i components_variant_big__1oy0ow4k components__1oy0ow4o components_variant_big__1oy0ow4p"
              >
                <span
                  class=""
                >
                  €0.00/Hour(s)
                </span>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <span
        class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a"
      >
        This summary provides a cost estimation based on your configuration, the amount of time you expect to use the resource for, and the scale of your expected usage. For the purposes of this calculation, we consider that 1 month equals to 730 hours.
      </span>
      <div>
        <table
          cellpadding="0"
          cellspacing="0"
          class="styles_total__1pgyf3t5 styles__1pgyf3t3"
          data-testid="summary"
        >
          <colgroup>
            <col />
            <col
              class="styles__1pgyf3t7"
            />
          </colgroup>
          <thead>
            <tr>
              <th>
                <h3
                  class="styles__1pgyf3te"
                >
                  <svg
                    aria-hidden="true"
                    class="styles__1pgyf3ts uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzg uv_icons_1sbwqkz1g"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M10 2q-2.29.002-4.507.276a1.965 1.965 0 0 0-1.715 1.961V16a2 2 0 0 0 2 2h8.444a2 2 0 0 0 2-2V4.237c0-.98-.716-1.838-1.715-1.961A37 37 0 0 0 10 2M6.436 8.889c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM7.102 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 7.111 14zm1.26-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM9.028 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 9.037 14zm1.263-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM10.957 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008a.667.667 0 0 0-.667-.667zm1.265-5.111c0-.368.299-.667.667-.667h.009c.368 0 .667.299.667.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.667 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.009a.667.667 0 0 0 .667-.666v-.01a.667.667 0 0 0-.667-.666zm0 1.925c.368 0 .667.299.667.667v1.926a.667.667 0 1 1-1.333 0V12.74c0-.368.298-.667.666-.667M7.111 4.667a.667.667 0 0 0-.667.666v.445c0 .368.299.666.667.666h5.778a.667.667 0 0 0 .667-.666v-.445a.667.667 0 0 0-.667-.666z"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Estimated cost
                </h3>
              </th>
              <th
                class="styles__1pgyf3tt styles__1pgyf3t8"
              >
                <div
                  class="styles__1pgyf3tg"
                >
                  <div
                    class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
                    style="--_1d8tbmb0: 100%;"
                  >
                    <div
                      class="styles_medium__gwf0fld styles_default__gwf0fl6 styles__gwf0fl5 styles__1w3vbem0"
                      style="--_85qyp70: auto auto; --_85qyp71: auto auto; --_85qyp72: auto auto; --_85qyp73: auto auto; --_85qyp74: auto auto; --_85qyp75: auto auto;"
                    >
                      <div
                        class="styles__gwf0flb"
                        id="input-field"
                      >
                        <input
                          aria-invalid="false"
                          class="styles_medium__gwf0fl3 styles__gwf0fl1"
                          data-testid="unit-input"
                          id="_r_5_"
                          max="9007199254740991"
                          min="1"
                          name="iteration-value"
                          placeholder="0"
                          step="1"
                          type="number"
                          value="1"
                        />
                      </div>
                      <div
                        aria-label="iteration-unit"
                        class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
                        style="--gwf0fl0: 100%;"
                      >
                        <div
                          aria-controls="_r_9_"
                          aria-describedby="_r_9_"
                          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
                          tabindex="-1"
                        >
                          <div
                            class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
                          >
                            <div
                              aria-controls="_r_9_"
                              aria-expanded="false"
                              class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_medium__r8qe4b selectBar_state_neutral__r8qe4e"
                              data-disabled="false"
                              data-readonly="false"
                              data-testid="select-input-iteration-unit"
                              id="unit"
                              role="combobox"
                              tabindex="0"
                            >
                              <span
                                class="selectBar__r8qe4m style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                              >
                                Hour(s)
                              </span>
                              <div
                                class="selectBar_small__r8qe43 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="components__1oy0ow43"
            >
              <td
                class="styles__1pgyf3t9"
                style="--_1pgyf3t0: 16px;"
              >
                <div
                  class="components__1oy0ow45"
                >
                  <div
                    class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                  >
                    <div
                      class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
                    >
                      <p
                        class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a"
                      >
                        NumberInput
                      </p>
                    </div>
                  </div>
                  <div
                    class="components__1oy0ow48 components_isOverlay_false__1oy0ow4a"
                  >
                    <div
                      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
                    >
                      <div>
                        <div
                          class="styles__1ce7gb6k styles_size_small__1ce7gb6n styles_state_default__1ce7gb6o"
                          data-controls="true"
                          data-disabled="false"
                          data-error="false"
                          data-size="small"
                          data-success="false"
                          data-unit="false"
                        >
                          <div
                            class="styles_small__1ce7gb62 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
                            data-size="small"
                          >
                            <button
                              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_xsmall__8xt08sh styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                              tabindex="-1"
                              type="button"
                            >
                              <span
                                class="styles__ahdbou0"
                              >
                                minus
                              </span>
                              <svg
                                aria-hidden="true"
                                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <path
                                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                                />
                              </svg>
                            </button>
                          </div>
                          <div
                            class="styles__1ce7gb63 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
                            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
                          >
                            <input
                              class="styles__1ce7gb6c styles_controls_true__1ce7gb6e styles_size_small__1ce7gb6i"
                              id="_r_i_"
                              inputmode="decimal"
                              max="100"
                              min="0"
                              placeholder=""
                              type="number"
                              value="1"
                            />
                          </div>
                          <div
                            class="styles_small__1ce7gb62 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
                            data-size="small"
                          >
                            <button
                              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_xsmall__8xt08sh styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                              tabindex="-1"
                              type="button"
                            >
                              <span
                                class="styles__ahdbou0"
                              >
                                plus
                              </span>
                              <svg
                                aria-hidden="true"
                                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <path
                                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="styles__1pgyf3t9 styles__1pgyf3t8"
                style="--_1pgyf3t0: 16px;"
              >
                <p
                  class="style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
                  style="--textAlign__1giziax0: right;"
                >
                  €0.00
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <table
          cellpadding="0"
          cellspacing="0"
          class="styles__1pgyf3td"
        >
          <colgroup>
            <col />
            <col
              class="styles__1pgyf3t7"
            />
          </colgroup>
          <tbody>
            <tr>
              <td
                aria-label="control"
                class="styles__1pgyf3tf"
              />
              <td
                class="styles__1pgyf3t9 styles__1pgyf3tc"
                style="--_1pgyf3t0: 16px;"
              >
                <h3
                  class="styles__1pgyf3tq style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_heading__1do42ls11 style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
                >
                  <span
                    class=""
                  >
                    €0.00
                  </span>
                </h3>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`estimateCost - NumberInput Item > render basic with overlay 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_default__1pgyf3t10 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
    >
      <div
        class="styles__1pgyf3tu styles_inView_false__1pgyf3tv"
        data-testid="summary-overlay"
        style="--_1pgyf3t1: 0;"
      >
        <ul
          class="styles__1pgyf3tx"
        >
          <li
            class="styles__1pgyf3tk styles_isFirstElement_true__1pgyf3tm"
          >
            <div
              class="styles__1pgyf3t9"
              style="--_1pgyf3t0: 16px;"
            >
              <div
                class=""
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <div
                    class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
                  >
                    <p
                      class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a"
                    >
                      NumberInput
                    </p>
                  </div>
                </div>
                <div
                  class="components__1oy0ow48 components_isOverlay_true__1oy0ow4b"
                >
                  <div
                    class="components__1oy0ow48 components_isOverlay_false__1oy0ow4a"
                  >
                    <div
                      class="components__1oy0ow4h components_isOverlay_true__1oy0ow4j components_variant_normal__1oy0ow4m"
                    >
                      1
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="styles__1pgyf3tk"
          >
            <div
              class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
            >
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzg uv_icons_1sbwqkz1g"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  clip-rule="evenodd"
                  d="M10 2q-2.29.002-4.507.276a1.965 1.965 0 0 0-1.715 1.961V16a2 2 0 0 0 2 2h8.444a2 2 0 0 0 2-2V4.237c0-.98-.716-1.838-1.715-1.961A37 37 0 0 0 10 2M6.436 8.889c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM7.102 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 7.111 14zm1.26-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM9.028 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 9.037 14zm1.263-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM10.957 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008a.667.667 0 0 0-.667-.667zm1.265-5.111c0-.368.299-.667.667-.667h.009c.368 0 .667.299.667.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.667 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.009a.667.667 0 0 0 .667-.666v-.01a.667.667 0 0 0-.667-.666zm0 1.925c.368 0 .667.299.667.667v1.926a.667.667 0 1 1-1.333 0V12.74c0-.368.298-.667.666-.667M7.111 4.667a.667.667 0 0 0-.667.666v.445c0 .368.299.666.667.666h5.778a.667.667 0 0 0 .667-.666v-.445a.667.667 0 0 0-.667-.666z"
                  fill-rule="evenodd"
                />
              </svg>
              Estimated cost
            </div>
            <div
              class="components__1oy0ow48 components_isOverlay_false__1oy0ow4a"
            >
              <div
                class="components__1oy0ow4h components_isOverlay_false__1oy0ow4i components_variant_big__1oy0ow4k components__1oy0ow4o components_variant_big__1oy0ow4p"
              >
                <span
                  class=""
                >
                  €0.00/Hour(s)
                </span>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <span
        class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a"
      >
        This summary provides a cost estimation based on your configuration, the amount of time you expect to use the resource for, and the scale of your expected usage. For the purposes of this calculation, we consider that 1 month equals to 730 hours.
      </span>
      <div>
        <table
          cellpadding="0"
          cellspacing="0"
          class="styles_total__1pgyf3t5 styles__1pgyf3t3"
          data-testid="summary"
        >
          <colgroup>
            <col />
            <col
              class="styles__1pgyf3t7"
            />
          </colgroup>
          <thead>
            <tr>
              <th>
                <h3
                  class="styles__1pgyf3te"
                >
                  <svg
                    aria-hidden="true"
                    class="styles__1pgyf3ts uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzg uv_icons_1sbwqkz1g"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M10 2q-2.29.002-4.507.276a1.965 1.965 0 0 0-1.715 1.961V16a2 2 0 0 0 2 2h8.444a2 2 0 0 0 2-2V4.237c0-.98-.716-1.838-1.715-1.961A37 37 0 0 0 10 2M6.436 8.889c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM7.102 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 7.111 14zm1.26-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM9.028 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 9.037 14zm1.263-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM10.957 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008a.667.667 0 0 0-.667-.667zm1.265-5.111c0-.368.299-.667.667-.667h.009c.368 0 .667.299.667.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.667 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.009a.667.667 0 0 0 .667-.666v-.01a.667.667 0 0 0-.667-.666zm0 1.925c.368 0 .667.299.667.667v1.926a.667.667 0 1 1-1.333 0V12.74c0-.368.298-.667.666-.667M7.111 4.667a.667.667 0 0 0-.667.666v.445c0 .368.299.666.667.666h5.778a.667.667 0 0 0 .667-.666v-.445a.667.667 0 0 0-.667-.666z"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Estimated cost
                </h3>
              </th>
              <th
                class="styles__1pgyf3tt styles__1pgyf3t8"
              >
                <div
                  class="styles__1pgyf3tg"
                >
                  <div
                    class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
                    style="--_1d8tbmb0: 100%;"
                  >
                    <div
                      class="styles_medium__gwf0fld styles_default__gwf0fl6 styles__gwf0fl5 styles__1w3vbem0"
                      style="--_85qyp70: auto auto; --_85qyp71: auto auto; --_85qyp72: auto auto; --_85qyp73: auto auto; --_85qyp74: auto auto; --_85qyp75: auto auto;"
                    >
                      <div
                        class="styles__gwf0flb"
                        id="input-field"
                      >
                        <input
                          aria-invalid="false"
                          class="styles_medium__gwf0fl3 styles__gwf0fl1"
                          data-testid="unit-input"
                          id="_r_13_"
                          max="9007199254740991"
                          min="1"
                          name="iteration-value"
                          placeholder="0"
                          step="1"
                          type="number"
                          value="1"
                        />
                      </div>
                      <div
                        aria-label="iteration-unit"
                        class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
                        style="--gwf0fl0: 100%;"
                      >
                        <div
                          aria-controls="_r_17_"
                          aria-describedby="_r_17_"
                          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
                          tabindex="-1"
                        >
                          <div
                            class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
                          >
                            <div
                              aria-controls="_r_17_"
                              aria-expanded="false"
                              class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_medium__r8qe4b selectBar_state_neutral__r8qe4e"
                              data-disabled="false"
                              data-readonly="false"
                              data-testid="select-input-iteration-unit"
                              id="unit"
                              role="combobox"
                              tabindex="0"
                            >
                              <span
                                class="selectBar__r8qe4m style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                              >
                                Hour(s)
                              </span>
                              <div
                                class="selectBar_small__r8qe43 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="components__1oy0ow43"
            >
              <td
                class="styles__1pgyf3t9"
                style="--_1pgyf3t0: 16px;"
              >
                <div
                  class="components__1oy0ow45"
                >
                  <div
                    class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                  >
                    <div
                      class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
                    >
                      <p
                        class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a"
                      >
                        NumberInput
                      </p>
                    </div>
                  </div>
                  <div
                    class="components__1oy0ow48 components_isOverlay_false__1oy0ow4a"
                  >
                    <div
                      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
                    >
                      <div>
                        <div
                          class="styles__1ce7gb6k styles_size_small__1ce7gb6n styles_state_default__1ce7gb6o"
                          data-controls="true"
                          data-disabled="false"
                          data-error="false"
                          data-size="small"
                          data-success="false"
                          data-unit="false"
                        >
                          <div
                            class="styles_small__1ce7gb62 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
                            data-size="small"
                          >
                            <button
                              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_xsmall__8xt08sh styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                              tabindex="-1"
                              type="button"
                            >
                              <span
                                class="styles__ahdbou0"
                              >
                                minus
                              </span>
                              <svg
                                aria-hidden="true"
                                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <path
                                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                                />
                              </svg>
                            </button>
                          </div>
                          <div
                            class="styles__1ce7gb63 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
                            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
                          >
                            <input
                              class="styles__1ce7gb6c styles_controls_true__1ce7gb6e styles_size_small__1ce7gb6i"
                              id="_r_1g_"
                              inputmode="decimal"
                              max="100"
                              min="0"
                              placeholder=""
                              type="number"
                              value="1"
                            />
                          </div>
                          <div
                            class="styles_small__1ce7gb62 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
                            data-size="small"
                          >
                            <button
                              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_xsmall__8xt08sh styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                              tabindex="-1"
                              type="button"
                            >
                              <span
                                class="styles__ahdbou0"
                              >
                                plus
                              </span>
                              <svg
                                aria-hidden="true"
                                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <path
                                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="styles__1pgyf3t9 styles__1pgyf3t8"
                style="--_1pgyf3t0: 16px;"
              >
                <p
                  class="style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
                  style="--textAlign__1giziax0: right;"
                >
                  €0.00
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <table
          cellpadding="0"
          cellspacing="0"
          class="styles__1pgyf3td"
        >
          <colgroup>
            <col />
            <col
              class="styles__1pgyf3t7"
            />
          </colgroup>
          <tbody>
            <tr>
              <td
                aria-label="control"
                class="styles__1pgyf3tf"
              />
              <td
                class="styles__1pgyf3t9 styles__1pgyf3tc"
                style="--_1pgyf3t0: 16px;"
              >
                <h3
                  class="styles__1pgyf3tq style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_heading__1do42ls11 style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
                >
                  <span
                    class=""
                  >
                    €0.00
                  </span>
                </h3>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`estimateCost - NumberInput Item > render with getAmountValue 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_default__1pgyf3t10 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
    >
      <div
        class="styles__1pgyf3tu styles_inView_false__1pgyf3tv"
        data-testid="summary-overlay"
        style="--_1pgyf3t1: 0;"
      >
        <ul
          class="styles__1pgyf3tx"
        >
          <li
            class="styles__1pgyf3tk styles_isFirstElement_true__1pgyf3tm"
          >
            <div
              class="styles__1pgyf3t9"
              style="--_1pgyf3t0: 16px;"
            >
              <div
                class=""
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <div
                    class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
                  >
                    <p
                      class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a"
                    >
                      NumberInput
                    </p>
                  </div>
                </div>
                <div
                  class="components__1oy0ow48 components_isOverlay_true__1oy0ow4b"
                >
                  <div
                    class="components__1oy0ow48 components_isOverlay_false__1oy0ow4a"
                  >
                    <div
                      class="components__1oy0ow4h components_isOverlay_true__1oy0ow4j components_variant_normal__1oy0ow4m"
                    >
                      1
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="styles__1pgyf3tk"
          >
            <div
              class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
            >
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzg uv_icons_1sbwqkz1g"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  clip-rule="evenodd"
                  d="M10 2q-2.29.002-4.507.276a1.965 1.965 0 0 0-1.715 1.961V16a2 2 0 0 0 2 2h8.444a2 2 0 0 0 2-2V4.237c0-.98-.716-1.838-1.715-1.961A37 37 0 0 0 10 2M6.436 8.889c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM7.102 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 7.111 14zm1.26-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM9.028 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 9.037 14zm1.263-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM10.957 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008a.667.667 0 0 0-.667-.667zm1.265-5.111c0-.368.299-.667.667-.667h.009c.368 0 .667.299.667.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.667 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.009a.667.667 0 0 0 .667-.666v-.01a.667.667 0 0 0-.667-.666zm0 1.925c.368 0 .667.299.667.667v1.926a.667.667 0 1 1-1.333 0V12.74c0-.368.298-.667.666-.667M7.111 4.667a.667.667 0 0 0-.667.666v.445c0 .368.299.666.667.666h5.778a.667.667 0 0 0 .667-.666v-.445a.667.667 0 0 0-.667-.666z"
                  fill-rule="evenodd"
                />
              </svg>
              Estimated cost
            </div>
            <div
              class="components__1oy0ow48 components_isOverlay_false__1oy0ow4a"
            >
              <div
                class="components__1oy0ow4h components_isOverlay_false__1oy0ow4i components_variant_big__1oy0ow4k components__1oy0ow4o components_variant_big__1oy0ow4p"
              >
                <span
                  class=""
                >
                  €0.00/Hour(s)
                </span>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <span
        class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a"
      >
        This summary provides a cost estimation based on your configuration, the amount of time you expect to use the resource for, and the scale of your expected usage. For the purposes of this calculation, we consider that 1 month equals to 730 hours.
      </span>
      <div>
        <table
          cellpadding="0"
          cellspacing="0"
          class="styles_total__1pgyf3t5 styles__1pgyf3t3"
          data-testid="summary"
        >
          <colgroup>
            <col />
            <col
              class="styles__1pgyf3t7"
            />
          </colgroup>
          <thead>
            <tr>
              <th>
                <h3
                  class="styles__1pgyf3te"
                >
                  <svg
                    aria-hidden="true"
                    class="styles__1pgyf3ts uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzg uv_icons_1sbwqkz1g"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M10 2q-2.29.002-4.507.276a1.965 1.965 0 0 0-1.715 1.961V16a2 2 0 0 0 2 2h8.444a2 2 0 0 0 2-2V4.237c0-.98-.716-1.838-1.715-1.961A37 37 0 0 0 10 2M6.436 8.889c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM7.102 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 7.111 14zm1.26-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM9.028 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 9.037 14zm1.263-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM10.957 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008a.667.667 0 0 0-.667-.667zm1.265-5.111c0-.368.299-.667.667-.667h.009c.368 0 .667.299.667.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.667 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.009a.667.667 0 0 0 .667-.666v-.01a.667.667 0 0 0-.667-.666zm0 1.925c.368 0 .667.299.667.667v1.926a.667.667 0 1 1-1.333 0V12.74c0-.368.298-.667.666-.667M7.111 4.667a.667.667 0 0 0-.667.666v.445c0 .368.299.666.667.666h5.778a.667.667 0 0 0 .667-.666v-.445a.667.667 0 0 0-.667-.666z"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Estimated cost
                </h3>
              </th>
              <th
                class="styles__1pgyf3tt styles__1pgyf3t8"
              >
                <div
                  class="styles__1pgyf3tg"
                >
                  <div
                    class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
                    style="--_1d8tbmb0: 100%;"
                  >
                    <div
                      class="styles_medium__gwf0fld styles_default__gwf0fl6 styles__gwf0fl5 styles__1w3vbem0"
                      style="--_85qyp70: auto auto; --_85qyp71: auto auto; --_85qyp72: auto auto; --_85qyp73: auto auto; --_85qyp74: auto auto; --_85qyp75: auto auto;"
                    >
                      <div
                        class="styles__gwf0flb"
                        id="input-field"
                      >
                        <input
                          aria-invalid="false"
                          class="styles_medium__gwf0fl3 styles__gwf0fl1"
                          data-testid="unit-input"
                          id="_r_33_"
                          max="9007199254740991"
                          min="1"
                          name="iteration-value"
                          placeholder="0"
                          step="1"
                          type="number"
                          value="1"
                        />
                      </div>
                      <div
                        aria-label="iteration-unit"
                        class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
                        style="--gwf0fl0: 100%;"
                      >
                        <div
                          aria-controls="_r_37_"
                          aria-describedby="_r_37_"
                          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
                          tabindex="-1"
                        >
                          <div
                            class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
                          >
                            <div
                              aria-controls="_r_37_"
                              aria-expanded="false"
                              class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_medium__r8qe4b selectBar_state_neutral__r8qe4e"
                              data-disabled="false"
                              data-readonly="false"
                              data-testid="select-input-iteration-unit"
                              id="unit"
                              role="combobox"
                              tabindex="0"
                            >
                              <span
                                class="selectBar__r8qe4m style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                              >
                                Hour(s)
                              </span>
                              <div
                                class="selectBar_small__r8qe43 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="components__1oy0ow43"
            >
              <td
                class="styles__1pgyf3t9"
                style="--_1pgyf3t0: 16px;"
              >
                <div
                  class="components__1oy0ow45"
                >
                  <div
                    class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                  >
                    <div
                      class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
                    >
                      <p
                        class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a"
                      >
                        NumberInput
                      </p>
                    </div>
                  </div>
                  <div
                    class="components__1oy0ow48 components_isOverlay_false__1oy0ow4a"
                  >
                    <div
                      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
                    >
                      <div>
                        <div
                          class="styles__1ce7gb6k styles_size_small__1ce7gb6n styles_state_default__1ce7gb6o"
                          data-controls="true"
                          data-disabled="false"
                          data-error="false"
                          data-size="small"
                          data-success="false"
                          data-unit="false"
                        >
                          <div
                            class="styles_small__1ce7gb62 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
                            data-size="small"
                          >
                            <button
                              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_xsmall__8xt08sh styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                              tabindex="-1"
                              type="button"
                            >
                              <span
                                class="styles__ahdbou0"
                              >
                                minus
                              </span>
                              <svg
                                aria-hidden="true"
                                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <path
                                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                                />
                              </svg>
                            </button>
                          </div>
                          <div
                            class="styles__1ce7gb63 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
                            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
                          >
                            <input
                              class="styles__1ce7gb6c styles_controls_true__1ce7gb6e styles_size_small__1ce7gb6i"
                              id="_r_3g_"
                              inputmode="decimal"
                              max="100"
                              min="0"
                              placeholder=""
                              type="number"
                              value="1"
                            />
                          </div>
                          <div
                            class="styles_small__1ce7gb62 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
                            data-size="small"
                          >
                            <button
                              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_xsmall__8xt08sh styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                              tabindex="-1"
                              type="button"
                            >
                              <span
                                class="styles__ahdbou0"
                              >
                                plus
                              </span>
                              <svg
                                aria-hidden="true"
                                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <path
                                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="styles__1pgyf3t9 styles__1pgyf3t8"
                style="--_1pgyf3t0: 16px;"
              >
                <p
                  class="style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
                  style="--textAlign__1giziax0: right;"
                >
                  €0.00
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <table
          cellpadding="0"
          cellspacing="0"
          class="styles__1pgyf3td"
        >
          <colgroup>
            <col />
            <col
              class="styles__1pgyf3t7"
            />
          </colgroup>
          <tbody>
            <tr>
              <td
                aria-label="control"
                class="styles__1pgyf3tf"
              />
              <td
                class="styles__1pgyf3t9 styles__1pgyf3tc"
                style="--_1pgyf3t0: 16px;"
              >
                <h3
                  class="styles__1pgyf3tq style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_heading__1do42ls11 style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
                >
                  <span
                    class=""
                  >
                    €0.00
                  </span>
                </h3>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`estimateCost - NumberInput Item > render with values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_default__1pgyf3t10 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
    >
      <div
        class="styles__1pgyf3tu styles_inView_false__1pgyf3tv"
        data-testid="summary-overlay"
        style="--_1pgyf3t1: 0;"
      >
        <ul
          class="styles__1pgyf3tx"
        >
          <li
            class="styles__1pgyf3tk styles_isFirstElement_true__1pgyf3tm"
          >
            <div
              class="styles__1pgyf3t9"
              style="--_1pgyf3t0: 16px;"
            >
              <div
                class=""
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <div
                    class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
                  >
                    <p
                      class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a"
                    >
                      Chocolates
                    </p>
                  </div>
                </div>
                <div
                  class="components__1oy0ow48 components_isOverlay_true__1oy0ow4b"
                >
                  <div
                    class="components__1oy0ow48 components_isOverlay_false__1oy0ow4a"
                  >
                    <div
                      class="components__1oy0ow4h components_isOverlay_true__1oy0ow4j components_variant_normal__1oy0ow4m"
                    >
                      50
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="styles__1pgyf3tk"
          >
            <div
              class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
            >
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzg uv_icons_1sbwqkz1g"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  clip-rule="evenodd"
                  d="M10 2q-2.29.002-4.507.276a1.965 1.965 0 0 0-1.715 1.961V16a2 2 0 0 0 2 2h8.444a2 2 0 0 0 2-2V4.237c0-.98-.716-1.838-1.715-1.961A37 37 0 0 0 10 2M6.436 8.889c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM7.102 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 7.111 14zm1.26-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM9.028 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 9.037 14zm1.263-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM10.957 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008a.667.667 0 0 0-.667-.667zm1.265-5.111c0-.368.299-.667.667-.667h.009c.368 0 .667.299.667.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.667 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.009a.667.667 0 0 0 .667-.666v-.01a.667.667 0 0 0-.667-.666zm0 1.925c.368 0 .667.299.667.667v1.926a.667.667 0 1 1-1.333 0V12.74c0-.368.298-.667.666-.667M7.111 4.667a.667.667 0 0 0-.667.666v.445c0 .368.299.666.667.666h5.778a.667.667 0 0 0 .667-.666v-.445a.667.667 0 0 0-.667-.666z"
                  fill-rule="evenodd"
                />
              </svg>
              Estimated cost
            </div>
            <div
              class="components__1oy0ow48 components_isOverlay_false__1oy0ow4a"
            >
              <div
                class="components__1oy0ow4h components_isOverlay_false__1oy0ow4i components_variant_big__1oy0ow4k components__1oy0ow4o components_variant_big__1oy0ow4p"
              >
                <span
                  class=""
                >
                  €50.00/Hour(s)
                </span>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <span
        class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a"
      >
        This summary provides a cost estimation based on your configuration, the amount of time you expect to use the resource for, and the scale of your expected usage. For the purposes of this calculation, we consider that 1 month equals to 730 hours.
      </span>
      <div>
        <table
          cellpadding="0"
          cellspacing="0"
          class="styles_total__1pgyf3t5 styles__1pgyf3t3"
          data-testid="summary"
        >
          <colgroup>
            <col />
            <col
              class="styles__1pgyf3t7"
            />
          </colgroup>
          <thead>
            <tr>
              <th>
                <h3
                  class="styles__1pgyf3te"
                >
                  <svg
                    aria-hidden="true"
                    class="styles__1pgyf3ts uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzg uv_icons_1sbwqkz1g"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M10 2q-2.29.002-4.507.276a1.965 1.965 0 0 0-1.715 1.961V16a2 2 0 0 0 2 2h8.444a2 2 0 0 0 2-2V4.237c0-.98-.716-1.838-1.715-1.961A37 37 0 0 0 10 2M6.436 8.889c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM7.102 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 7.111 14zm1.26-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM9.028 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 9.037 14zm1.263-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM10.957 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008a.667.667 0 0 0-.667-.667zm1.265-5.111c0-.368.299-.667.667-.667h.009c.368 0 .667.299.667.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.667 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.009a.667.667 0 0 0 .667-.666v-.01a.667.667 0 0 0-.667-.666zm0 1.925c.368 0 .667.299.667.667v1.926a.667.667 0 1 1-1.333 0V12.74c0-.368.298-.667.666-.667M7.111 4.667a.667.667 0 0 0-.667.666v.445c0 .368.299.666.667.666h5.778a.667.667 0 0 0 .667-.666v-.445a.667.667 0 0 0-.667-.666z"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Estimated cost
                </h3>
              </th>
              <th
                class="styles__1pgyf3tt styles__1pgyf3t8"
              >
                <div
                  class="styles__1pgyf3tg"
                >
                  <div
                    class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
                    style="--_1d8tbmb0: 100%;"
                  >
                    <div
                      class="styles_medium__gwf0fld styles_default__gwf0fl6 styles__gwf0fl5 styles__1w3vbem0"
                      style="--_85qyp70: auto auto; --_85qyp71: auto auto; --_85qyp72: auto auto; --_85qyp73: auto auto; --_85qyp74: auto auto; --_85qyp75: auto auto;"
                    >
                      <div
                        class="styles__gwf0flb"
                        id="input-field"
                      >
                        <input
                          aria-invalid="false"
                          class="styles_medium__gwf0fl3 styles__gwf0fl1"
                          data-testid="unit-input"
                          id="_r_21_"
                          max="9007199254740991"
                          min="1"
                          name="iteration-value"
                          placeholder="0"
                          step="1"
                          type="number"
                          value="1"
                        />
                      </div>
                      <div
                        aria-label="iteration-unit"
                        class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
                        style="--gwf0fl0: 100%;"
                      >
                        <div
                          aria-controls="_r_25_"
                          aria-describedby="_r_25_"
                          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
                          tabindex="-1"
                        >
                          <div
                            class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
                          >
                            <div
                              aria-controls="_r_25_"
                              aria-expanded="false"
                              class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_medium__r8qe4b selectBar_state_neutral__r8qe4e"
                              data-disabled="false"
                              data-readonly="false"
                              data-testid="select-input-iteration-unit"
                              id="unit"
                              role="combobox"
                              tabindex="0"
                            >
                              <span
                                class="selectBar__r8qe4m style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                              >
                                Hour(s)
                              </span>
                              <div
                                class="selectBar_small__r8qe43 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="components__1oy0ow43"
            >
              <td
                class="styles__1pgyf3t9"
                style="--_1pgyf3t0: 16px;"
              >
                <div
                  class="components__1oy0ow45"
                >
                  <div
                    class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                  >
                    <div
                      class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
                    >
                      <p
                        class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a"
                      >
                        Chocolates
                      </p>
                      <p
                        class="components__1oy0ow4d style__1do42ls0 style_italic_true__1do42ls2 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
                      >
                        Chocolate is never free :(
                      </p>
                    </div>
                  </div>
                  <div
                    class="components__1oy0ow48 components_isOverlay_false__1oy0ow4a"
                  >
                    <div
                      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
                    >
                      <div>
                        <div
                          class="styles__1ce7gb6k styles_size_small__1ce7gb6n styles_state_default__1ce7gb6o"
                          data-controls="true"
                          data-disabled="false"
                          data-error="false"
                          data-size="small"
                          data-success="false"
                          data-unit="false"
                        >
                          <div
                            class="styles_small__1ce7gb62 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
                            data-size="small"
                          >
                            <button
                              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_xsmall__8xt08sh styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                              tabindex="-1"
                              type="button"
                            >
                              <span
                                class="styles__ahdbou0"
                              >
                                minus
                              </span>
                              <svg
                                aria-hidden="true"
                                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <path
                                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                                />
                              </svg>
                            </button>
                          </div>
                          <div
                            class="styles__1ce7gb63 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
                            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
                          >
                            <input
                              class="styles__1ce7gb6c styles_controls_true__1ce7gb6e styles_size_small__1ce7gb6i"
                              id="_r_2g_"
                              inputmode="decimal"
                              max="51"
                              min="0"
                              placeholder=""
                              type="number"
                              value="50"
                            />
                          </div>
                          <div
                            class="styles_small__1ce7gb62 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
                            data-size="small"
                          >
                            <button
                              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_xsmall__8xt08sh styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                              tabindex="-1"
                              type="button"
                            >
                              <span
                                class="styles__ahdbou0"
                              >
                                plus
                              </span>
                              <svg
                                aria-hidden="true"
                                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <path
                                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="styles__1pgyf3t9 styles__1pgyf3t8"
                style="--_1pgyf3t0: 16px;"
              >
                <p
                  class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
                  style="--textAlign__1giziax0: right;"
                >
                  €50.00
                </p>
                <p
                  class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a"
                  style="--textAlign__1giziax0: right;"
                >
                  €1.00/chocolate/hour(s)
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <table
          cellpadding="0"
          cellspacing="0"
          class="styles__1pgyf3td"
        >
          <colgroup>
            <col />
            <col
              class="styles__1pgyf3t7"
            />
          </colgroup>
          <tbody>
            <tr>
              <td
                aria-label="control"
                class="styles__1pgyf3tf"
              />
              <td
                class="styles__1pgyf3t9 styles__1pgyf3tc"
                style="--_1pgyf3t0: 16px;"
              >
                <h3
                  class="styles__1pgyf3tq style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_heading__1do42ls11 style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
                >
                  <span
                    class=""
                  >
                    €50.00
                  </span>
                </h3>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
